--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,38 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  /*background-color: yellow;*/
+}
+.main{
+  margin-top: 3em;
+}
+.menu-bar{
+  position: fixed;
+  height: 3em;
+  width: 100%;
+  border: solid black 2px;
+  background-color: #59b4f5;
+}
+.menu-bar-left{
+  float: left;
+}
+.menu-bar-right{
+  float: right;
+  height: 100%;
+}
+.menu{
+  height: 100%;
+  margin: 0;
+
+}
+.menu-items{
+  float: right;
+  margin: 0em 1em;
+  list-style-type: none;
+  border-left: black solid 1px;
+  height: 100%;
+  text-align: center;
+}
+.menu-items:hover{
+  background-color: hsl(199, 77%, 57%,0.6)
 }
